[package]
name = "rmap"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.9"
lambda_runtime = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.14.0"

axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
serde = { version = "1.0.183", features = ["derive"] }
reqwest = { version = "0.11.19", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.4"
aes = "0.8.3"
handlebars = {version = "4.4.0", features = ["dir_source"]}

futures = "0.3"
serde_json = "1.0"
json = "0.12.4"
tower = {version = "0.4.13", features = ["limit", "buffer"]}
tower-http = { version = "0.5.1", features = ["full"] }
tower-sessions = "0.10.2"
chrono = {version = "0.4.31", features = ["serde"]}
strum = "0.25"
strum_macros = "0.25"
dotenv = "0.15.0"
aws-sdk-dynamodb = "1.13.1"
